# editwheel

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: bench_edit.rs
python/editwheel/: __init__.py  cli.py
src/: error.rs  lib.rs  name.rs  python.rs
src/elf/: editor.rs  mod.rs  types.rs
src/metadata/: mod.rs  types.rs
src/record/: mod.rs  types.rs
src/wheel/: mod.rs  reader.rs  validator.rs  writer.rs
src/wheel_info/: mod.rs  types.rs
test/: test_hash_validation.py  test_uv_compatibility.py  test_wheel_editor.py  test_with_real_wheels.py
tests/: integration_test.rs
