[package]
name = "editwheel"
version = "0.2.5"
edition = "2021"
description = "High-performance Python wheel metadata editor"
license = "MIT"

[lib]
name = "editwheel"
crate-type = ["cdylib", "rlib"]

[dependencies]
zip = { git = "https://github.com/suo/zip2.git" }
thiserror = "2.0"            # Error derive macros
sha2 = "0.10"                # SHA256 hashing
base64 = "0.22"              # Hash encoding
csv = "1.3"                  # RECORD parsing
rayon = "1.10"               # Parallel processing
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
elb = "0.4"                  # ELF patching (RPATH, RUNPATH, interpreter)
glob = "0.3"                 # Glob pattern matching for file paths
libc = "0.2"                 # System page size detection for arm64 compatibility

[dev-dependencies]
tempfile = "3"

[features]
default = []
python = ["pyo3"]

[profile.release]
lto = true
